# chess-opening-spaced-repetition

./: .gitignore  .pre-commit-config.yaml  mypy.ini  output.apkg  pyproject.toml  truc.apkg
.github/workflows/: tests.yml  typing.yml
anki-chess-openings/: anki.py  openings.py
anki-chess-openings/lichess/: editor.py
chess-opening-spaced-repetition/: anki.py  openings.py  wikibooks.py
chess-opening-spaced-repetition/lichess/: openings.py
chess-opening-spaced-repetition/tests/: test_openings.py
cosrg/: anki.py  openings.py
cosrg/lichess/: editor.py  openings.py
cosrg/tests/: test_openings.py
fixtures/vcr_cassettes/: french_defense_deep_2.yaml
