[tool.poetry]
name = "chess-opening-spaced-repetition"
version = "0.1.0"
description = "Create spaced repetition deck to learn chess openings"
authors = ["Romain Pesche <romain@pesche.fr>"]
readme = "README.md"
packages = [{include = "chess-opening-spaced-repetition"}]

[tool.poetry.dependencies]
python = "^3.11"
berserk = "^0.12.10"
selenium = "^4.12.0"
chess = "^1.10.0"
genanki = "^0.13.0"
pytest = "^7.4.2"
vcrpy = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
